--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ p.white {color: var(--white); }
 /* Střídání barev pozadí pro lepší čitelnost */
 #uvod { 
     background: linear-gradient(rgba(0, 86, 179, 1), rgba(0, 86, 179, 0.7)), 
-                url('galerie/header-bg.jpg'); 
+                url('galerie/header-bg.jpg') no-repeat center center/cover; 
     height: 100vh;
 }
 #informace { background-color: var(--light-blue); }
