--- a/style.css
+++ b/style.css
@@ -118,13 +118,13 @@ nav ul li a:hover { opacity: 0.7; }
 /* Společné nastavení sekcí */
 section {
     position: relative;
-    padding: 7rem 2rem 4rem;
+    padding: 5rem 2rem 5rem;
     min-height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    justify-content: center;
+    vertical-align: middle;    
 }
 
 .container { max-width: 1000px; width: 100%; }
@@ -139,7 +139,8 @@ p.white {color: var(--white); }
 #uvod { 
     background: linear-gradient(rgba(0, 86, 179, 1), rgba(0, 86, 179, 0.7)), 
                 url('galerie/header-bg.jpg') no-repeat center center/cover; 
-    height: 100vh;
+    min-height: 100vh;
+    padding-top: 180px;
 }
 #informace { background-color: var(--light-blue); }
 #novinky { background-color: var(--white); }
